--- a/static/update/index.css
+++ b/static/update/index.css
@@ -465,7 +465,7 @@ html {
     -ms-flex-align: center;
         align-items: center;
     font-family: 'Poppins', sans-serif;
-    background-color: #fff;
+    background-color: #2424;
     background-size: cover;
     background-position: center center;
     padding: 15px;
