--- a/static/update/index.css
+++ b/static/update/index.css
@@ -88,6 +88,7 @@ html {
    * 2. Remove gaps in links underline in iOS 8+ and Safari 8+.
    */
   a {
+    background-color: transparent;
     /* 1 */
     -webkit-text-decoration-skip: objects;
     /* 2 */
@@ -464,7 +465,7 @@ html {
     -ms-flex-align: center;
         align-items: center;
     font-family: 'Poppins', sans-serif;
-    background-color: #353535;
+    background: url("../images/Search_132.png");
     background-size: cover;
     background-position: center center;
     padding: 15px;
@@ -527,6 +528,7 @@ html {
   }
   
   .s132 form .inner-form .input-field.first-wrap .choices__inner {
+    background: transparent;
     border-radius: 0;
     border: 1px solid rgba(255, 255, 255, 0.3);
     height: 100%;
@@ -568,7 +570,7 @@ html {
   
   .s132 form .inner-form .input-field.first-wrap .choices[data-type*="select-one"]:after {
     right: 30px;
-    border-color: #e5e5e5;
+    border-color: #e5e5e5 transparent transparent transparent;
   }
   
   .s132 form .inner-form .input-field.first-wrap .choices__list.choices__list--dropdown {
@@ -644,4 +646,100 @@ html {
   .s132 form .inner-form .input-field.third-wrap .btn-search:focus {
     outline: 0;
     box-shadow: none;
+  }
+  
+  @media screen and (max-width: 992px) {
+    .s132 form .inner-form .input-field {
+      height: 50px;
+    }
+  }
+  
+  @media screen and (max-width: 767px) {
+    .s132 form .inner-form {
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+      padding: 20px;
+    }
+    .s132 form .inner-form .input-field {
+      margin-bottom: 20px;
+    }
+    .s132 form .inner-form .input-field input {
+      padding: 10px 15px;
+    }
+    .s132 form .inner-form .input-field.first-wrap {
+      width: 100%;
+    }
+    .s132 form .inner-form .input-field.first-wrap .choices__inner {
+      padding: 10px 15px;
+    }
+    .s132 form .inner-form .input-field.first-wrap .choices[data-type*="select-one"]:after {
+      right: 11.5px;
+      border-color: #e5e5e5 transparent transparent transparent;
+    }
+    .s132 form .inner-form .input-field.second-wrap {
+      width: 100%;
+    }
+    .s132 form .inner-form .input-field.second-wrap input {
+      border: 1px solid rgba(255, 255, 255, 0.3);
+    }
+    .s132 form .inner-form .input-field.third-wrap {
+      margin-bottom: 0;
+      width: 100%;
+    }
+  }
+  
+  /*# sourceMappingURL=Searchs_132.css.map */
+
+  @font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url(/fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLDz8Z11lFc-K.woff2) format('woff2');
+    unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
+  }
+  /* latin-ext */
+  @font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url(/fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLDz8Z1JlFc-K.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  }
+  /* latin */
+  @font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url(/fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLDz8Z1xlFQ.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  }
+  /* devanagari */
+  @font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(/fonts.gstatic.com/s/poppins/v20/pxiEyp8kv8JHgFVrJJbecmNE.woff2) format('woff2');
+    unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
+  }
+  /* latin-ext */
+  @font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(/fonts.gstatic.com/s/poppins/v20/pxiEyp8kv8JHgFVrJJnecmNE.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  }
+  /* latin */
+  @font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(/fonts.gstatic.com/s/poppins/v20/pxiEyp8kv8JHgFVrJJfecg.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
